--- a/Coursework/Coursework/Coursework.vcxproj.filters
+++ b/Coursework/Coursework/Coursework.vcxproj.filters
@@ -72,5 +72,8 @@
     <None Include="Header.hlsli">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="Perlin_noise.hlsli">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
