--- a/Coursework/Coursework/Coursework.vcxproj.filters
+++ b/Coursework/Coursework/Coursework.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TextureShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PerlinTextureShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h">
@@ -53,6 +56,9 @@
     <ClInclude Include="resource4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PerlinTextureShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="RayMarching_ps.hlsl">
@@ -65,6 +71,12 @@
       <Filter>Resource Files</Filter>
     </FxCompile>
     <FxCompile Include="texture_ps.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="Perlin_vs.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="Perlin_ps.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
   </ItemGroup>
