--- a/Coursework/DXFramework/DXFramework.vcxproj.filters
+++ b/Coursework/DXFramework/DXFramework.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClInclude Include="..\include\imGUI\stb_truetype.h">
       <Filter>GUI</Filter>
     </ClInclude>
+    <ClInclude Include="TDRenderTarget.h">
+      <Filter>Header Files\Scene</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BaseMesh.cpp">
@@ -226,6 +229,9 @@
     </ClCompile>
     <ClCompile Include="..\include\imGUI\imgui_impl_win32.cpp">
       <Filter>GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="TDRenderTarget.cpp">
+      <Filter>Source Files\Scene</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
