--- a/Coursework/Coursework/Coursework.vcxproj.filters
+++ b/Coursework/Coursework/Coursework.vcxproj.filters
@@ -103,6 +103,12 @@
     <FxCompile Include="Light_vs.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="New_manipulator_ps.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="New_manipulator_vs.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Header.hlsli">
