Got a smoothing function to work...
Im going to have to try and make this more efficient cause at the moment because its being done via the shader it is a nightmare. Maybe I can track when the camera moves and it needs to update arrrggghhh

--- a/Coursework/Coursework/Coursework.vcxproj
+++ b/Coursework/Coursework/Coursework.vcxproj
@@ -273,6 +273,7 @@
   <ItemGroup>
     <None Include="Header.hlsli" />
     <None Include="Perlin_noise.hlsli" />
+    <None Include="Vertex_manipulation_header_.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
