--- a/Coursework/Coursework/Coursework.vcxproj
+++ b/Coursework/Coursework/Coursework.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="PerlinTextureShader.cpp" />
     <ClCompile Include="RayMarchingShader.cpp" />
     <ClCompile Include="TextureShader.cpp" />
+    <ClCompile Include="VertexManipulatorShader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h" />
@@ -182,6 +183,7 @@
     <ClInclude Include="resource3.h" />
     <ClInclude Include="resource4.h" />
     <ClInclude Include="TextureShader.h" />
+    <ClInclude Include="VertexManipulatorShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DXFramework\DXFramework.vcxproj">
@@ -189,6 +191,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <FxCompile Include="New_manipulator_ps.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="New_manipulator_vs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+    </FxCompile>
     <FxCompile Include="Perlin_ps.hlsl">
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
@@ -233,6 +243,7 @@
   <ItemGroup>
     <None Include="Header.hlsli" />
     <None Include="Perlin_noise.hlsli" />
+    <None Include="Vertex_manipulation_header_.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
