--- a/Coursework/Coursework/Coursework.vcxproj.filters
+++ b/Coursework/Coursework/Coursework.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PerlinTextureShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VertexManipulatorShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h">
@@ -59,6 +62,9 @@
     <ClInclude Include="PerlinTextureShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="VertexManipulatorShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="RayMarching_ps.hlsl">
@@ -79,12 +85,21 @@
     <FxCompile Include="Perlin_ps.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
+    <FxCompile Include="New_manipulator_vs.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="New_manipulator_ps.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Header.hlsli">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Perlin_noise.hlsli">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="Vertex_manipulation_header_.hlsli">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
