Renamed som headers so they made more sense
Now I need to see if I can find this memory leak

--- a/Coursework/Coursework/Coursework.vcxproj.filters
+++ b/Coursework/Coursework/Coursework.vcxproj.filters
@@ -93,13 +93,16 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Header.hlsli">
+    <None Include="RayHeader.hlsli">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Perlin_noise.hlsli">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="Vertex_manipulation_header_.hlsli">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="LightHeader.hlsli">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
