--- a/Coursework/Coursework/Coursework.vcxproj
+++ b/Coursework/Coursework/Coursework.vcxproj
@@ -241,7 +241,8 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Header.hlsli" />
+    <None Include="LightHeader.hlsli" />
+    <None Include="RayHeader.hlsli" />
     <None Include="Perlin_noise.hlsli" />
     <None Include="Vertex_manipulation_header_.hlsli" />
   </ItemGroup>
